--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 authors = ["Samuel Dolt <samuel@dolt.ch>"]
 
 [dependencies]
-
+log = "0.3.6"
+env_logger = "0.3.5"
 
 [dependencies.gtk]
 version = "0.1.1"
