--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Samuel Dolt <samuel@dolt.ch>"]
 [dependencies]
 log = "0.3.6"
 env_logger = "0.3.5"
+regex = "0.1.80"
 
 [dependencies.gtk]
 version = "0.1.1"
