--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 authors = ["Samuel Dolt <samuel@dolt.ch>"]
 
 [dependencies]
-log = "0.3.6"
-env_logger = "0.3.5"
+slog = "1.3.2"
+slog-term = "1.3.3"
 regex = "0.1.80"
+chrono = "0.2.25"
+lazy_static = "0.2.2"
 
 [dependencies.gtk]
 version = "0.1.1"
