--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ authors = ["Samuel Dolt <samuel@dolt.ch>"]
 slog = "1.3.2"
 slog-term = "1.3.3"
 regex = "0.1.80"
-chrono = "0.2.25"
+docopt = "0.6.86"
+rustc-serialize = "0.3.22"
 lazy_static = "0.2.2"
 
 [dependencies.gtk]
